[project]
name = "sphinx-autodoc"
version = "0.0.0"
authors = [
    {name = "Steve Schmerler", email = "git@elcorto.com"}
]
description = "Almost, but not quite, entirely unlike sphinx-apidoc."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = [
    "sphinx",
    "apidoc",
    "autodoc",
    "autosummary",
]


[project.scripts]
sphinx-autodoc = "sphinx_autodoc.main:main"


[tool.black]
line-length = 79


[tool.ruff]
line-length = 79
ignore = ["E501", "E731"]


[tool.mypy]
ignore_missing_imports = true
implicit_optional = true


[build-system]
requires = ["setuptools>=66.1", "wheel"]
build-backend = "setuptools.build_meta"
